@@ -1,5 +1,11 @@
 2004-01-13  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Add back the GNOME standard properties to gnome_program_init(),
+	whoops. Thanks to jrb for noticing.
+
+2004-01-13  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	* data/sound-juicer.glade:
 	Add a virtual penis, showing the estimated duration and ripping
